Support json with an extra context field